# EmptyBlock.dev

./: .dockerignore  .env.template  .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile.toml  README.md  about.html.hbs  about.toml  deny.toml  disco.json  docker-compose.yml  fly.toml  squill.toml
.cargo/: config.toml
.github/workflows/: audit.yml  deploy.yml  pull_request.yml
.squill/templates/create_table/: new.down.sql  new.up.sql
migrations/0000000000-init/: down.sql  up.sql
migrations/0000000001-manage_updated_at/: down.sql  up.sql
migrations/1708993022-create_greetings/: down.sql  up.sql
migrations/1717085460-create_users/: up.sql
migrations/1717441611-add_greeting_templates/: down.sql  up.sql
migrations/1717714459-create_tower_sessions/: down.sql  up.sql
migrations/1720493622-create_jobs/: down.sql  up.sql
scripts/: generate-third-party-licenses
server/: Cargo.toml  build.rs
server/src/: auth.rs  main.rs  recurse.rs
server/src/orm/: greetings.rs  jobs.rs  mod.rs  prelude.rs  something.rs  users.rs
src/: main.rs
web/: .gitignore  Cargo.toml  index.html  index.scss  tailwind.config.js  tailwind.scss
web/src/: apps.rs  components.rs  hooks.rs  main.rs  pages.rs  types.rs
web/src/apps/: mosaic.rs  tiles.rs  trellis.rs
web/src/components/: block.rs  board.rs  board_editor.rs  clock.rs  counter.rs  editor.rs  error.rs  footer.rs  grid.rs  header.rs  note.rs  simulation.rs  simulation_editor.rs  trellis_config_context.rs  weather.rs
web/src/data/: default.wat
web/src/pages/: home.rs  mosaic.rs  not_found.rs  tiles.rs  trellis.rs  trellis_config.rs
web/src/types/: csrf_token.rs  session.rs
