[workspace]
resolver = '2'
members = ['server', 'web']

[workspace.package]
license = "BlueOak-1.0.0"
publish = false
repository = "https://github.com/jdkaplan/EmptyBlock.dev"

[workspace.metadata.bin]
cargo-about = { version = '0.6.1' }
cargo-deny = { version = '0.12.2' }
cargo-machete = { version = '0.6.2' }
cargo-make = { version = '0.37.10' }
sea-orm-cli = { version = '0.12.14' }
squill-cli = { version = '0.9.1', bins = ["squill"] }
trunk = { version = '0.18.8' }
wasm-pack = { version = '0.12.1' }
