[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
color-eyre = "0.6.2"
eyre = "0.6.12"
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
