[package]
name = "server"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-private", "typed-header"] }
base64 = "0.22.1"
color-eyre = "0.6.3"
eyre = "0.6.12"
http = "1.1.0"
markup = "0.15.0"
oauth2 = "4.4.2"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-query = "0.30.7"
serde = { version = "1.0.203", features = ["derive"] }
subtle = { version = "2.6.1", features = ["core_hint_black_box", "const-generics"] }
thiserror = "1.0.64"
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-sessions = { version = "0.12.2", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.12.0", features = ["postgres"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
uuid = "1.8.0"
