[package]
name = "web"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish.workspace = true

[dependencies]
base64 = "0.21.7"
eyre = "0.6.12"
getrandom = { version = "0.2.12", features = ["js"] }
gloo = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
tracing-web = "0.1.3"
wasm-bindgen-futures = "0.4.41"
wasmi = "0.31.2"
wat = "1.201.0"
web-sys = { version = "0.3.68", features = ["HtmlInputElement", "HtmlTextAreaElement", "DomTokenList", "Element"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
