[package]
name = "web"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
eyre = "0.6.12"
getrandom = { version = "0.2.14", features = ["js"] }
gloo = "0.11.0"
http = "1.1.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.119"
thiserror = "1.0.61"
time = { version = "0.3.34", features = ["formatting", "local-offset", "macros", "wasm-bindgen"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
tracing-web = "0.1.3"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
wasm-bindgen-futures = "0.4.42"
wasmi = "0.31.2"
wat = "1.218.0"
web-sys = { version = "0.3.69", features = ["HtmlInputElement", "HtmlTextAreaElement", "DomTokenList", "Element"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[package.metadata.cargo-machete]
ignored = ["getrandom"]
